--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.672.0",
     "@prisma/client": "^5.20.0",
-    "next": "14.2.6",
+    "next": "^14.2.35",
     "pdf-lib": "^1.17.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
